changing servers url and refactoring code

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -6,9 +6,9 @@
           <ion-button (click)="cancel()">Cancelar</ion-button>
         </ion-buttons>
         <ion-buttons slot="end" class="ion-align-items-center">
-          <ion-button (click)="confirm()" [strong]="true"
+          <!-- <ion-button (click)="confirm()" [strong]="true"
             >Confirmar</ion-button
-          >
+          > -->
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
