--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -43,6 +43,15 @@
           formControlName="telefone"
         ></ion-input>
       </ion-item>
+      <ion-item>
+        <ion-input
+          label="CPF/CNPJ"
+          labelPlacement="floating"
+          type="text"
+          value="{{user.cpfcnpj}}"
+          formControlName="cpfcnpj"
+        ></ion-input>
+      </ion-item>
 
         <ion-button type="submit" color="success" >
           Atualizar
