--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -172,9 +172,11 @@
             <span>Documento: {{document.recebedor_documento}}</span>
             <span>Data: {{dataEntrega}}</span>
           </div>
+          <a href="{{document.foto_canhoto}}">
           <ion-thumbnail>
             <ion-img src={{document.foto_canhoto}}/>
           </ion-thumbnail>
+        </a>
          </ion-card-content>
      </ion-card>
 
