--- a/src/app/pages/usuarios/usuarios.page.html
+++ b/src/app/pages/usuarios/usuarios.page.html
@@ -1,6 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Usuários</ion-title>
+    <ion-buttons slot="end" class="ion-padding-end">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -8,6 +11,9 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Usuários</ion-title>
+      <ion-buttons slot="end" class="ion-padding-end">
+        <ion-back-button defaultHref="/home"></ion-back-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
   <div class="ion-padding">
