--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,9 @@
 <ion-content [fullscreen]="true">
   <div id="container">
-    <strong>Delivery<span class="and">&</span>Check</strong>
+    <!-- <strong>Delivery<span class="and">&</span>Check</strong> -->
     <section>
       <img
-        src="../../../assets/entrega.svg"
+        src="../../../assets/loginLogo.png"
         alt="logo com traços de uma entrega"
       />
       <form [formGroup]="loginForm">
