--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
+
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -75,6 +76,15 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --ion-background-color: #fefefe;
+  }
+}
+
+
 
 @media (prefers-color-scheme: dark) {
   /*
@@ -236,7 +246,7 @@
 }
 
 html {
-  /* 
+  /*
    * For more information on dynamic font scaling, visit the documentation:
    * https://ionicframework.com/docs/layout/dynamic-font-scaling
    */
