--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,182 +16,38 @@
           <ion-button expand="block" (click)="scan()"
             ><ion-icon name="barcode-outline"></ion-icon>
           </ion-button>
-          <ion-input placeholder="Chave aqui" (ionInput)="changeValueInputKey($event)" (keyup)="onKeyUpByKey($event)"  value="{{nfKey}}" />
+          <ion-input
+            placeholder="Chave aqui"
+            (ionInput)="changeValueInputKey($event)"
+            (keyup)="onKeyUpByKey($event)"
+            value="{{nfKey}}"
+          />
         </div>
 
         <div>
           <ion-button expand="block" (click)="scanQrCode()">
             <ion-icon name="qr-code-outline"></ion-icon>
           </ion-button>
-          <ion-input placeholder="Qr code aqui" (ionInput)="changeValueInput($event)" (keyup)="onKeyUp($event)" value="{{valueInput}}" />
+          <ion-input
+            placeholder="Qr code aqui"
+            (ionInput)="changeValueInput($event)"
+            (keyup)="onKeyUp($event)"
+            value="{{valueInput}}"
+          />
         </div>
       </ion-card>
     </ion-list>
-
-    <ion-list>
-      <ion-list-header>
-        <ion-label>Motorista</ion-label>
-      </ion-list-header>
-      <ion-card>
-        <ion-card-content>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                <ion-input
-                  [readonly]="true"
-                  value={{document.nome_completo}}
-                  label="Nome"
-                ></ion-input>
-              </ion-item>
-
-              <ion-item>
-                <ion-input
-                  label="Telefone:"
-                  [readonly]="true"
-                  value={{document.telefone}}                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-        </ion-card-content>
-      </ion-card>
-      <ion-list-header>
-        <ion-label>Destinatário</ion-label>
-      </ion-list-header>
-      <ion-card>
-        <ion-card-content>
-          <ion-row>
-            <ion-col size="12" size-sm="8">
-              <ion-item>
-                <ion-input
-                  label="Nome:"
-                  [readonly]="true"
-                  value={{document.nome_destinatario}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-input
-                  label="Data:"
-                  [readonly]="true"
-                  value={{dataEntrega}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-
-          <ion-row>
-            <ion-col size="12" size-sm="7">
-              <ion-item>
-                <ion-input
-                  label="CPF/CNPJ:"
-                  type="data"
-                  [readonly]="true"
-                  value={{document.recebedor_documento}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-input
-                  label="Telefone:"
-                  [readonly]="true"
-                  value="{{document.tel_destinatario}}"
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-
-          <ion-row>
-            <ion-col size="12" size-sm="8">
-              <ion-item>
-                <ion-input
-                  label="Endereço:"
-                  [readonly]="true"
-                  value={{document.end_logradouro}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col>
-              <ion-item>
-                <ion-input
-                  label="Número:"
-                  [readonly]="true"
-                  value={{document.end_numero}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-
-          <ion-row>
-            <ion-col size="12" size-sm="3">
-              <ion-item>
-                <ion-input
-                  label="CEP:"
-                  [readonly]="true"
-                  value={{document.end_cep}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col size="12" size-sm="7">
-              <ion-item>
-                <ion-input
-                  label="Cidade:"
-                  [readonly]="true"
-                  value={{document.end_cidade}}
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col size="12" size-sm="2">
-              <ion-item>
-                <ion-input label="UF:" [readonly]="true" value={{document.uf_destinatario}}></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-button
-          id="open-modal"
-          expand="block"
-          [disabled]="!canOpenModal"
-          [color]="updateComplete ? 'warning' : ''"
-          >
-          {{updateComplete ? 'Editar Entrega' : 'Seguir com entrega'}}
-
-        </ion-button>
-        </ion-card-content>
-      </ion-card>
-     <app-modal (update)="handleUpdateDocument()" documentId={{document.iddocumento}}></app-modal>
-     @if(updateComplete) {
-       <ion-card class="ion-padding recipient-container-success">
-         <ion-card-header>
-           <ion-card-title>Entrega Efetuada</ion-card-title>
-           <ion-card-subtitle>Dados recebedor</ion-card-subtitle>
-         </ion-card-header>
-         <ion-card-content class="receipt-content">
-          <div>
-            <span>Recebida por: {{document.recebedor_nome}}</span>
-            <span>Documento: {{document.recebedor_documento}}</span>
-            <span>Data: {{dataEntrega}}</span>
-          </div>
-          <a href="{{document.foto_canhoto}}">
-          <ion-thumbnail>
-            <ion-img src={{document.foto_canhoto}}/>
-          </ion-thumbnail>
-        </a>
-         </ion-card-content>
-     </ion-card>
-
-     } @else {
-        @if(canOpenModal) {
-          <ion-card class="ion-padding recipient-container">
-            <ion-card-header>
-              <ion-card-title>Entrega Não Efetuada</ion-card-title>
-            </ion-card-header>
-            <ion-card-content class=" receipt_content">
-              Entrega Aguardando recebimento
-            </ion-card-content>
-          </ion-card>
-        }
-     }
-    </ion-list>
+    @if(document.iddocumento) {
+      <app-document-info
+      (clearInputCode)="handleClearCode()"
+      [document]="document"
+      [updateComplete]="updateComplete"
+      [canOpenModal]="canOpenModal">
+    </app-document-info>
+    }
+    <app-modal
+    (update)="handleUpdateDocument()"
+    documentId="{{document.iddocumento}}"
+  ></app-modal>
   </ion-content>
 </div>
