--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -19,7 +19,6 @@
     .input-box {
       display: flex;
       flex-direction: column;
-
       text-align: start;
       width: 100%;
       height: 100%;
@@ -59,7 +58,8 @@
 
 
       img {
-        width: 50%;
+        width: 100%;
+        border-radius: 1rem 1rem 0 0;
       }
 
       form {
