--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -19,6 +19,7 @@
             <ion-list>
               <ion-item>
                 <ion-input
+                  autoFocus
                   label="Nome Recebedor"
                   labelPlacement="floating"
                   type="text"
