--- a/src/app/components/document-info/document-info.component.html
+++ b/src/app/components/document-info/document-info.component.html
@@ -1,9 +1,10 @@
-<ion-list>
+<!-- <ion-list> -->
+  <main>
   <ion-list-header>
     <ion-label>Motorista</ion-label>
   </ion-list-header>
-  <ion-card>
-    <ion-card-content>
+  <div>
+    <!-- <ion-card-content> -->
       <ion-row>
         <ion-col>
           <ion-item>
@@ -23,13 +24,13 @@
           </ion-item>
         </ion-col>
       </ion-row>
-    </ion-card-content>
-  </ion-card>
+    <!-- </ion-card-content> -->
+  </div>
   <ion-list-header>
     <ion-label>Destinatário</ion-label>
   </ion-list-header>
-  <ion-card>
-    <ion-card-content>
+  <div>
+    <!-- <ion-card-content> -->
       <ion-row>
         <ion-col size="12" size-sm="8">
           <ion-item>
@@ -126,7 +127,6 @@
         </ion-col>
       </ion-row>
       <app-modal
-        (update)="handleUpdateDocument()"
         documentId="{{ document.iddocumento }}"
       ></app-modal>
       <ion-button
@@ -137,12 +137,8 @@
       >
         {{ updateComplete ? "Editar Entrega" : "Seguir com entrega" }}
       </ion-button>
-      <ion-button expand="block" (click)="clearData()">
-        <ion-icon slot="start" name="duplicate-outline"></ion-icon>
-        novo
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
+    <!-- </ion-card-content> -->
+    </div>
 
   @if(updateComplete) {
   <ion-card class="ion-padding recipient-container-success">
@@ -173,5 +169,13 @@
       Entrega Aguardando recebimento
     </ion-card-content>
   </ion-card>
+
   } }
-</ion-list>
+
+    <ion-button expand="block" (click)="clearData()">
+      <ion-icon slot="start" name="duplicate-outline"></ion-icon>
+      novo
+    </ion-button>
+
+<!-- </ion-list> -->
+</main>
