--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -3,19 +3,21 @@ ion-content {
     margin-top: 2rem;
   }
 
-  ion-list {
-    // padding: 0 .5rem;
-    width: 100%;
+  header {
     max-width: 800px;
     margin: 0 auto;
+    margin-bottom: 1rem;
   }
 
   div {
     display: flex;
     margin: 0 auto;
     padding: .5rem;
-    height: 72px;
     gap: 1rem;
+
+    ion-button {
+      height: 100%;
+    }
 
     ion-input {
       margin-top: 16px;
@@ -55,7 +57,6 @@ ion-card {
 
 
   ion-card-content {
-    // padding: .5rem;
     padding-bottom: 1rem;
   }
 }
