add some styles and make responsive on update docuemt

--- a/src/app/components/document-info/document-info.component.html
+++ b/src/app/components/document-info/document-info.component.html
@@ -169,13 +169,12 @@
       Entrega Aguardando recebimento
     </ion-card-content>
   </ion-card>
-
   } }
-
+  <div>
     <ion-button expand="block" (click)="clearData()">
       <ion-icon slot="start" name="duplicate-outline"></ion-icon>
       novo
     </ion-button>
-
+  </div>
 <!-- </ion-list> -->
 </main>
