--- a/src/app/components/empty-document/empty-document.component.html
+++ b/src/app/components/empty-document/empty-document.component.html
@@ -1,7 +1,7 @@
 <ion-card class="ion-padding">
-  <ion-icon name="sad-outline"></ion-icon>
+  <ion-icon name="file-tray-full-outline"></ion-icon>
   <ion-card-content>
-    <ion-card-title>Bem vindo!!</ion-card-title>
+    <ion-card-title>Documento Vazio</ion-card-title>
     Escaneie um documento para dar início a entrega.
   </ion-card-content>
 </ion-card>
