--- a/src/app/components/empty-document/empty-document.component.scss
+++ b/src/app/components/empty-document/empty-document.component.scss
@@ -1,5 +1,6 @@
 ion-card {
   margin: 0 auto;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +8,6 @@ ion-card {
   min-height: 300px;
   max-width: 800px;
   padding: 1rem;
-
 
   ion-icon {
     font-size: 4rem;
