--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,13 +74,14 @@
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  --ion-color-light-tint: #f3f3f3;
 }
 
 
 @media (prefers-color-scheme: light) {
   :root {
     --ion-background-color: #fefefe;
+    --card-background:  #f1f1f1;
   }
 }
 
@@ -155,6 +156,8 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+    --card-background:  #1E1E1E;
   }
 
   /*
