add foco on modal input

--- a/src/app/components/document-info/document-info.component.html
+++ b/src/app/components/document-info/document-info.component.html
@@ -59,7 +59,7 @@
               label="CPF/CNPJ:"
               type="data"
               [readonly]="true"
-              value="{{ document.recebedor_documento }}"
+              value="{{ document.cpfcnpj_destinatario }}"
             ></ion-input>
           </ion-item>
         </ion-col>
