feat: adding frete list

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -37,6 +37,12 @@
           >Usuários Castrados</ion-label
         >
       </ion-item>
+      <ion-item>
+        <ion-icon name="people-circle-outline" slot="start"></ion-icon>
+        <ion-label routerLink="/fretes" routerLinkActive="active"
+          >Lista de fretes</ion-label
+        >
+      </ion-item>
       <ion-item (click)="logout()">
         <ion-icon name="exit" slot="start"></ion-icon>
         <ion-menu-toggle>
