--- a/src/app/pages/document/document.page.html
+++ b/src/app/pages/document/document.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Cadastro de Documentos</ion-title>
-    <ion-buttons slot="end" class="ion-padding-end">
-      <ion-back-button defaultHref="/home"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Cadastro de Documentos"></app-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
