--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,10 +2,12 @@
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
+      <div style="display: flex; justify-content: space-between; margin: 0 auto; width: 100%; max-width: 1440px">
       <ion-title> Registrar entrega </ion-title>
       <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
+    </div>
     </ion-toolbar>
   </ion-header>
 
