--- a/src/app/pages/usuarios/usuarios.page.html
+++ b/src/app/pages/usuarios/usuarios.page.html
@@ -1,11 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Usuários</ion-title>
-    <ion-buttons slot="end" class="ion-padding-end">
-      <ion-back-button defaultHref="/home"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Usuários"></app-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
