--- a/src/app/pages/fretes/fretes.page.scss
+++ b/src/app/pages/fretes/fretes.page.scss
@@ -2,3 +2,10 @@ ion-toolbar {
   --background: linear-gradient(196deg, rgb(29, 209, 206) 0%, rgb(3, 47, 54) 100%);
   --color: rgb(237, 237, 237);
 }
+.favorito {
+  color: yellow
+}
+
+.nao-favorito {
+  color: silver
+}
